# LuaSTG-Sub

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  License.txt  Readme.md  SECURITY.md  build.bat  c-cpp.yml  checklist.md  copy_bin.bat  readme.md  readme.txt  vcpkg-configuration.json  vcpkg.json  version.json
Core/: CMakeLists.txt
Core/Core/: ApplicationModel.hpp  ApplicationModel_Win32.cpp  ApplicationModel_Win32.hpp  FileManager.cpp  FileManager.hpp  InitializeConfigure.cpp  InitializeConfigure.hpp  Type.hpp  framework.cpp  framework.hpp  i18n.cpp
DirectShowClass/: CMakeLists.txt
DirectX/: .gitignore  CMakeLists.txt  WICTextureLoader9.cpp
LuaSTG/: .gitignore  CMakeLists.txt  Core.cmake  Custom.cmake.example  Platform.cmake  Sources.cmake  import_luastg_options.cmake  import_luastg_options.h.in  shaders.cmake  write-version.lua
LuaSTG/Backend/: ApplicationModel.cpp  FileManager.cpp  InitializeConfigure.cpp  Model.cpp  Model.hpp  ModelShader.cpp  ModelShader.hpp  Renderer.cpp  Shader.hpp  default.pixel.hlsl  framework.cpp  framework.hpp
LuaSTG/Configurer/: CMakeLists.txt  Configurer.manifest  Main.cpp  SharedHeaders.h  main.cpp
LuaSTG/Core/: Application.hpp  ApplicationModel.hpp  ApplicationModel_Win32.cpp  ApplicationModel_Win32.hpp  DataObject.cpp  FileManager.cpp  FileManager.hpp  ImmutableString.cpp  InitializeConfigure.cpp  InitializeConfigure.hpp  Object.cpp  Object.hpp  PresentationModel.cpp  PresentationModel.hpp  Renderer.hpp  Type.hpp  default.vertex.hlsl  framework.cpp  framework.hpp  i18n.cpp  i18n.hpp
LuaSTG/Graphic/: DearImGuiRenderer.cpp  DearImGuiRenderer.h  DearImGuiRendererShader.inl  Device.cpp  Device.h  DeviceResource.h  DeviceResourceObject.h  DeviceState.h  DeviceStateObject.h  Object.h  SpriteRenderer.cpp  SpriteRenderer.h  Test.cpp  Test.h  TestEmpty.cpp  Type.h  slowPostEffectExt.hpp.bak
LuaSTG/LuaSTG/: AppFrame.cpp  AppFrame.h  AppFrameAdapterPolicy.cpp  AppFrameDisplayMode.cpp  AppFrameFontRenderer.cpp  AppFrameInput.cpp  AppFrameLua.cpp  AppFrameRender.cpp  AppFrameRenderEx.cpp  ApplicationRestart.cpp  ApplicationRestart.hpp  LConfig.h  LConfig.h.in  LMathConstant.hpp  LuaSTG.manifest  LuaSTG.manifest.in  Main.cpp  Main.h  RuntimeCheck.cpp  RuntimeCheck.hpp  SharedHeaders.cpp  SharedHeaders.h  WindowsMain.cpp
LuaSTG/Platform/: AdapterPolicy.cpp  All.cpp  ApplicationSingleInstance.hpp  CleanWindows.hpp  CommandLine.cpp  CommandLineArguments.hpp  DXGI.hpp  DesktopWindowManager.hpp  DetectCPU.hpp  Direct3D11.hpp  DisplayModeUpdater.cpp  DisplayModeUpdater.hpp  HResultChecker.cpp  HighDPI.cpp  HighDPI.hpp  ImmersiveTitleBarController.cpp  ImmersiveTitleBarController.hpp  Keyboard.cpp  Keyboard.hpp  MessageBox.cpp  ModuleLoader.hpp  Monitor.cpp  Monitor.hpp  ProcessorInfo.cpp  Shared.hpp  WindowSizeMoveController.cpp  WindowTheme.cpp  WindowsVersion.cpp  WindowsVersion.hpp  XInput.cpp
LuaSTG/Shader/: CMakeLists.txt  ShaderCompiler.cpp
LuaSTG/backup/: CollisionDetect.cpp  CollisionDetect.h  slowPostEffectExt.cpp,bak
LuaSTG/configurer/: CMakeLists.txt  LuaSTGConfig.manifest  main.cpp
LuaSTG/configurer_/: CMakeLists.txt
LuaSTG/cpp/: CircularQueue.hpp  Dictionary.hpp  fixed_object_pool.hpp  xorshift_old.txt
LuaSTG/doc/: README.md  history.md
LuaSTG/fancylib/: fcyRefObj.cpp  fcyType.h
LuaSTG/internal-lua-scripts/: CMakeLists.txt  readme.md
LuaSTG/pch/: pch.cpp  pch.h
LuaSTG/res/: AppFrameLuaEx.cpp  Config.h  Custom.cmake  LuaSTGPlus.rc  ResourcePassword.cpp  resource.h  resource.rc
LuaSTG/src/: AdapterPolicy.cpp  AdapterPolicy.hpp  AppFrame.cpp  AppFrame.h  AppFrameFontRenderer.cpp  AppFrameInput.cpp  AppFrameLua.cpp  AppFrameRender.cpp  AppFrameRenderEx.cpp  Bencode.cpp  Bencode.h  CircularQueue.hpp  CirularQueue.hpp  CollisionDetect.cpp  CollisionDetect.h  Config.h  Dictionary.hpp  E2DFileManager.cpp  E2DFileManager.hpp  ESC.cpp  ESC.h  GameObject.cpp  GameObject.hpp  GameObjectBentLaser.cpp  GameObjectBentLaser.hpp  GameObjectClass.cpp  GameObjectClass.hpp  GameObjectPool.cpp  GameObjectPool.h  Global.h  ImGuiExt.h  ImGuiExtension.cpp  ImGuiExtension.h  LConfig.h  LLogger.cpp  LLogger.hpp  LMathConstant.hpp  LogSystem.cpp  LogSystem.h  LuaCustomLoader.cpp  (+47 more)
LuaSTGConfig/: CMakeLists.txt  LuaSTGConfig.manifest  main.cpp
engine/: .clang-format  CMakeLists.txt
engine/audio/: CMakeLists.txt
engine/clipboard/: CMakeLists.txt
engine/collection/: CMakeLists.txt
engine/configuration/: CMakeLists.txt
engine/doc/: readme.md
engine/embedded-file-system/: CMakeLists.txt
engine/file-system/: CMakeLists.txt
engine/font/: CMakeLists.txt  design.md  readme.md
engine/graphics/: CMakeLists.txt  design.md
engine/image/: CMakeLists.txt  readme.md
engine/logging/: CMakeLists.txt
engine/lua/: CMakeLists.txt
engine/math/: CMakeLists.txt
engine/reference-counted/: CMakeLists.txt
engine/scriptable/: CMakeLists.txt
engine/shell-integration/: CMakeLists.txt
engine/string/: CMakeLists.txt
engine/utf8/: CMakeLists.txt  utf8.cpp
engine/utility/: CMakeLists.txt
engine/uuid/: CMakeLists.txt
engine/win32/: CMakeLists.txt
engine/window-system/: CMakeLists.txt
eyes2d/: CMakeLists.txt  E2DCodePage.hpp  E2DException.hpp  E2DFileManager.cpp  E2DFileManager.hpp  E2DFilePath.hpp  E2DGlobal.hpp  E2DLogSystem.cpp  E2DLogSystem.hpp  E2DMainFunction.hpp  E2DMath.hpp  E2DXInput.cpp  E2DXInput.hpp
eyes2d/shit/: E2DAudioEngine.cpp  E2DAudioEngine.hpp  E2DCodePage.cpp  E2DMath.cpp  (+8 more)
fancy2d/: CMakeLists.txt  f2d.h  f2dConfig.h  f2dEngine.h  f2dFileSys.h  f2dInputSys.h  f2dInterface.h  f2dRenderDevice.h  f2dRenderEffect.h  f2dRenderer.h  f2dSoundSys.h  f2dVideoSys.h  f2dWindow.h
fancylib/: CMakeLists.txt  fcyException.cpp  fcyException.h  fcyMath.h  fcyRefObj.h  fcyResult.h  fcyType.h
imgui/: CMakeLists.txt
platform/: CMakeLists.txt
prebuild/: .gitignore  CMakeLists.txt
slow/: CMakeLists.txt
steam/: .gitignore  CMakeLists.txt
utility/: CMakeLists.txt  utf8.cpp  utf8.hpp
xmath/: CMakeLists.txt
(+1811 files in other folders)
