add_subdirectory(utf8)
add_subdirectory(win32)
add_subdirectory(utility)
add_subdirectory(lua)
add_subdirectory(math)
add_subdirectory(collection)
add_subdirectory(uuid)
add_subdirectory(reference-counted)
add_subdirectory(string)
add_subdirectory(configuration)
add_subdirectory(logging)
add_subdirectory(file-system)
add_subdirectory(embedded-file-system)
add_subdirectory(clipboard)
add_subdirectory(shell-integration)
add_subdirectory(audio)
add_subdirectory(image)
add_subdirectory(font)
add_subdirectory(graphics)
